--- a/app/index.css
+++ b/app/index.css
@@ -216,9 +216,8 @@ tr {
 
 th {
   height: 40px;
-  position: sticky;
   top: 0;
-
+  opacity: 1;
   color: var(--color);
   z-index: 1;
   border-bottom: 1px solid var(--border-color);
